...
    <string name="app_name">KartWheel</string>
    <string name="players_title">Players:</string>
    <string name="mini_game_title">Play mini games for more points &amp; more fun!</string>

    <!-- Onboarding -->
    <!-- + Start -->
    <string name="onboarding_started_title">Welcome to KartWheel!</string>
    <string name="onboarding_started_description">Fire shells from your phone while racing friends.</string>
    <string name="onboarding_started_button">Get started</string>
    <!-- + Selfie -->
    <string name="onboarding_selfie_title">Take a selfie</string>
    <string name="onboarding_selfie_description">Brush your hair and smile big. This is the photo
        everyone will see while you\'re racing with Kartwheel!</string>
...

    <string name="battery_life_text">Charge up! You need 20% to run a race!</string>
    <string name="race_count_down_title">Race starts in:</string>
    <string name="top_course_times_title">Top course times:</string>
    <string name="logout_title">Logout?</string>
    <string name="logout">Logout</string>
    <string name="support_email">support@handstandwith.us</string>
    <string name="already_claimed_title">Invalid ticket</string>
    <string name="contact_us_subject_line">KartWheel - Android</string>
    <string name="contact_us_body">My ticket was already claimed! %s$1</string>
    <string name="scroll_down">Scroll down</string>
    <string name="critical_information">Critical information</string>
    <string name="pancakes_waffles">Pancakes or Waffles?</string>
    <string name="charmander_squirtle">Charmander or Squirtle?</string>
    <string name="furby_tamagachi">Furby or Tamagachi?</string>
    <string name="next">Next</string>
    <string name="first_name">FIRST</string>
    <string name="last_name">LAST</string>
    <string name="email">EMAIL</string>
    <string name="cell">CELL #</string>
    <string name="dob">DOB (MM/DD/YYYY)</string>
    <string name="nickname">NICKNAME (MAKE IT GOOD)</string>
    <string name="welcome">Welcome</string>
    <string name="im_ready">I\'m ready</string>
    <string name="contact_us">Contact us</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="tos">Terms &amp; Conditions</string>
    <string name="enter_code">Enter your ticket code</string>
...
    <string name="need_selfie">Need a selfie, brah!</string>
    <string name="wait_for_selfie_upload">Patience is key&#8230;Please wait for selfie to upload</string>
    <string name="selfie_upload_failed">Unable to upload selfie. Please check your network and try again.</string>
    <string name="need_buddy">You need to pick a buddy before continuing!</string>
    <string name="buddy_upload_failed">Unable to pick your buddy! Please check your network and try again.</string>
    <string name="unclaimed_ticket">UNCLAIMED </string>
    <string name="forfeit_ticket">Forfeit ticket</string>
    <string name="forfeit_ticket_title">Forfeit ticket?</string>
    <string name="keep_ticket">Keep my ticket</string>
    <string name="share_code">Share ticket code</string>
    <string name="tos_content">THE KARTWHEEL (\"EVENT\") WAIVER &amp; RELEASE OF CLAIMS, INDEMNITY
        AGREEMENT, ASSUMPTION OF RISK, AND CONSENT TO MEDICAL TREATMENT (\"WAIVER &amp; RELEASE\")\n\n
        PLEASE READ THE FOLLOWING CAREFULLY, AS IT AFFECTS YOUR FUTURE LEGAL RIGHTS. BY PROCEEDING
        WITH REGISTERING FOR THE EVENT, YOU ACKNOWLEDGE AND AGREE THAT YOU HAVE CAREFULLY READ,
        FULLY UNDERSTAND, AND AGREE TO ALL OF THE TERMS SET FORTH BELOW.\n\nThe following must be
...
