<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstName"
                style="@style/TicketInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textPersonName"
                android:nextFocusDown="@+id/lastName"
                android:nextFocusRight="@+id/lastName" />

            <EditText
                android:id="@+id/lastName"
                style="@style/TicketInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textPersonName"
                android:nextFocusDown="@+id/email"
                android:nextFocusRight="@+id/email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                style="@style/TicketInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/cell"
                android:nextFocusRight="@+id/cell" />

            <EditText
                android:id="@+id/cell"
                style="@style/TicketInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:digits="0123456789-"
                android:hint="@string/cell"
                android:imeOptions="actionNext"
                android:inputType="number|phone"
                android:maxLength="12"
                android:nextFocusDown="@+id/birth"
                android:nextFocusRight="@+id/birth" />
        </LinearLayout>

        <EditText
            android:id="@+id/birth"
            style="@style/TicketInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:digits="0123456789/"
            android:hint="@string/dob"
            android:imeOptions="actionNext"
            android:inputType="number|date"
            android:maxLength="10"
            android:nextFocusDown="@+id/nickname"
            android:nextFocusForward="@+id/nickname"
            android:nextFocusRight="@+id/nickname" />

        <EditText
            android:id="@+id/nickname"
            style="@style/TicketInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/nickname"
            android:imeOptions="actionGo"
            android:inputType="textCapSentences|textPersonName" />

    </LinearLayout>
</ScrollView>