...
        android:textColor="@color/green"
        android:textSize="34dp"
        android:textStyle="bold"
        tools:text="P1" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/forfeit_or_share"
        android:layout_toRightOf="@+id/player_number"
        android:textSize="16dp"
        tools:text="Matthew Ott" />

    <ImageView
        android:id="@+id/forfeit_or_share"
...
