<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_tos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.handstand.kartwheel.activity.TicketActivity">

    <us.handstand.kartwheel.layout.KartTextView
        android:id="@+id/title"
        style="@style/TicketContentTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tos" />

    <us.handstand.kartwheel.layout.TOSScrollView
        android:id="@+id/tosScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_margin="16dp"
        android:background="@drawable/button_round"
        android:elevation="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <us.handstand.kartwheel.layout.KartTextView
            android:id="@+id/tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tos_content" />
    </us.handstand.kartwheel.layout.TOSScrollView>
</RelativeLayout>
